--- a/components/NonGraphSection.css
+++ b/components/NonGraphSection.css
@@ -13,6 +13,9 @@
   padding: 1rem;
   margin: 0.5rem auto;
 }
+a {
+  width: 100%;
+}
 .btnVPR {
   background-color: rgb(149, 153, 166);
   color: white;
